--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -25,12 +25,12 @@ div{
 	margin: 3em 0 3em 0;
 	background-color: [#FFE2B8];
 }
-}
 
 section{
 	margin: 3em 0 3em 0
 	background-color: [#FFE2B8];
 }
+
 header {
 	
 	background-color: [#FFED74];
@@ -58,6 +58,15 @@ h1{
 }
 
 #middle-title {
+	font-family: 'BenchNine', sans-serif;
+	font-size: 3em;
+	width:49%;
+	display: inline-block;
+	line-height: 375px;
+    color: red;
+	vertical-align: top;
+}
+.mid-title {
 	font-family: 'BenchNine', sans-serif;
 	font-size: 3em;
 	width:49%;
