--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -1,15 +1,15 @@
 *{
 	padding: 0;
 	margin: 0;
+	box-sizing:border-box;
 }
 body{
 	font-family: 'Roboto', sans-serif;
 	background-color: pink;
-	background-position: center;
-	background-size: 1920px 1080px;
-	text-align: center;
+	/* text-align: center; */
 	font-size: 16px; /*1em=16px*/
 	margin-top: 50px;
+	color: rgba(0,0,0,.9);
 }
 
 img {
@@ -18,24 +18,22 @@ img {
 
 p{
 	font-size: 1.5em;
-	text-indent: 50px;
+	/* text-indent: 50px; */
+	margin-bottom: 1em;
 }
 
 div{
 	margin: 3em 0 3em 0;
-	background-color: [#FFE2B8];
+
 }
 
 section{
-	margin: 3em 0 3em 0
-	background-color: [#FFE2B8];
+	margin: 3em 0 3em 0;
 }
 
 header {
-	
-	background-color: [#FFED74];
     border: 1px black solid;
-    padding: 20px;;
+    padding: 20px;
 }
 header img {
 	width: 49%;
@@ -47,14 +45,17 @@ h1{
 	color: red;
 	font-size: 3em;
 }
+h1, h2, h3, h4 {
+	text-align:center;
+}
 
 #wrapper{
 	width: 90%;
-	margin: 0 auto;
+	margin: 0 a uto;
 }
-#lorem{
-	width: 50%;
-	margin: 0 auto;
+.lorem{
+	width: 40%;
+	margin: 1em auto;
 }
 
 #middle-title {
@@ -75,3 +76,6 @@ h1{
     color: red;
 	vertical-align: top;
 }
+.bfooter { 
+	text-align: center;}
+
