--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -77,5 +77,12 @@ h1, h2, h3, h4 {
 	vertical-align: top;
 }
 .bfooter { 
-	text-align: center;}
+	text-align: center;
+}
+
+@media screen and (min-width: 500px) {
+	body {
+		font-size: 90%;
+	}
+}
 
